SDK 27 지원하지 않는 오류 수정

--- a/kfingerprintmanager/build.gradle
+++ b/kfingerprintmanager/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+repositories {
+    google()
+}
 
 android {
     compileSdkVersion parent.ext.compileSdkVersion
