android x 마이그레이션

--- a/kfingerprintmanager/build.gradle
+++ b/kfingerprintmanager/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'maven'
 
 group = 'com.wirebarley'
-version = '2.0.2-9'
+version = '2.0.3-1'
 
 repositories {
     google()
@@ -19,7 +19,7 @@ android {
         versionCode 4
         versionName "2.0.2"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -54,7 +54,7 @@ uploadArchives {
 }
 
 dependencies {
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     implementation 'com.android.support:design:' + parent.ext.supportLibsVersion
