string에서 chararray로 변경

--- a/kfingerprintmanager/build.gradle
+++ b/kfingerprintmanager/build.gradle
@@ -28,6 +28,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+        }
+        adhoc {
+            minifyEnabled false
+        }
     }
 
     sourceSets {
